feat: create middleware and validate if token is valid
