# docs/swagger.json
@@ -66,6 +66,11 @@
         },
         "/accounts/{cpf}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Find account using the Brazilian individual taxpayer registry identification number (CPF)",
                 "consumes": [
                     "application/json"
@@ -139,20 +144,14 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/usecases.SignResponseDTO"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/dtos.HttpErrorDTO"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/dtos.HttpErrorDTO"
                         }
@@ -275,6 +274,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "accessToken",
+            "in": "header"
         }
     }
 }
